# miniagent

./: .gitignore  CLAUDE.md  README.md  agent_config.toml  pyproject.toml
.claude/agents/: security-reviewer.md
.claude/skills/: iterateandfixagent.md
docs/superpowers/plans/: 2026-05-24-iterateandfixagent-skill.md  2026-05-24-miniagent.md
docs/superpowers/specs/: 2026-05-24-auto-agent-design.md  2026-05-24-iterateandfixagent-skill-design.md
miniagent/: __main__.py  cli.py  detector.py  fixer.py  logger.py  runner.py
miniagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_cli.py  test_detector.py  test_fixer.py  test_logger.py  test_runner.py
tests/sample_project/: main.py
